I understand that in the product list, SKUs with the same size used to share the same image, and individual images weren't registered for each SKU. Now, this has been changed so that SKUs with the same color use the same image. SKUs no longer directly own images; instead, they refer to productColorVariant to fetch the image corresponding to that color.
When return prodcutList in AdminProductController, prodcuts would be sorted based on coloor